feat: add TypeScript and decorators-legacy plugins to Prettier configuration

--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -5,6 +5,7 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderCaseInsensitive": true,
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
 
   "importOrder": ["<THIRD_PARTY_MODULES>", "^@/(.*)$", "^../(.*)", "^./(.*)"],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
