feat(package): update package name, description, author details, and license

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "backend",
+  "name": "@elcast/backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "A streaming platform offering interactive live content.",
+  "author": {
+    "name": "Eldar Mirzabekov",
+    "email": "eldarcodes@icloud.com",
+    "url": "https://eldarcodes.com"
+  },
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
