--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,9 +14,21 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - elcast-backend
+  redis:
+    container_name: redis
+    image: redis:5.0
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-service --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - redis_data:/data
+    networks:
+      - elcast-backend
 
 volumes:
   postgres_data:
+  redis_data:
 
 networks:
   elcast-backend:
