--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,18 @@
 NODE_ENV=
 
+APPLICATION_PORT=
+APPLICATION_URL=
+ALLOWED_ORIGIN=
+
+COOKIES_SECRET=
+SESSION_SECRET=
+SESSION_NAME=
+SESSION_DOMAIN=
+SESSION_MAX_AGE=
+SESSION_HTTP_ONLY=
+SESSION_SECURE=
+SESSION_FOLDER=
+
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
@@ -8,3 +21,9 @@ POSTGRES_DATABASE=
 POSTGRES_URI=
 
 GRAPHQL_PREFIX=
+
+REDIS_USER=
+REDIS_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
+earEDIS_URI=
