--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "connect-redis": "^8.0.1",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
