--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -5,7 +5,7 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderCaseInsensitive": true,
-  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy", "jsx"],
 
   "importOrder": ["<THIRD_PARTY_MODULES>", "^@/(.*)$", "^../(.*)", "^./(.*)"],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
