--- a/backend/package.json
+++ b/backend/package.json
@@ -48,10 +48,13 @@
     "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "graphql": "^16.10.0",
+    "hi-base32": "^0.5.1",
     "i18n-iso-countries": "^7.13.0",
     "ioredis": "^5.4.2",
     "nodemailer": "^6.9.16",
+    "otpauth": "^9.3.6",
     "prisma": "^6.1.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.0",
@@ -70,6 +73,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.0.2",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
