--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,4 +26,15 @@ REDIS_USER=
 REDIS_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
-earEDIS_URI=
+REDIS_URI=
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_LOGIN=
+MAIL_PASSWORD=
+
+S3_ENDPOINT=
+S3_REGION=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
