feat: add db seed command

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:push": "prisma db push",
+    "db:seed": "ts-node src/core/prisma/prisma.seed.ts",
     "db:studio": "prisma studio"
   },
   "dependencies": {
