--- a/backend/package.json
+++ b/backend/package.json
@@ -57,6 +57,7 @@
     "i18n-iso-countries": "^7.13.0",
     "ioredis": "^5.4.2",
     "livekit-server-sdk": "^1.2.7",
+    "nestjs-telegraf": "^2.8.1",
     "nodemailer": "^6.9.16",
     "otpauth": "^9.3.6",
     "prisma": "^6.1.0",
@@ -67,6 +68,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "telegraf": "^4.16.3",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
