--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
     "next": "15.1.4",
+    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
