--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
