--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
+    "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
