--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
     "html-react-parser": "^5.2.2",
@@ -49,6 +50,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
