--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "graphql-config": "^5.1.3",
     "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
@@ -52,6 +53,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -62,6 +64,7 @@
     "@parcel/watcher": "^2.5.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
