--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.10.0",
+    "@livekit/components-react": "^2.8.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -44,7 +45,9 @@
     "graphql-config": "^5.1.3",
     "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "livekit-client": "^2.8.1",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
@@ -58,6 +61,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
