--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^5.0.0",
+    "react-share": "^5.2.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
