--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
     "html-react-parser": "^5.2.2",
@@ -61,6 +62,7 @@
     "react-leaflet": "^5.0.0",
     "react-share": "^5.2.0",
     "sonner": "^1.7.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
