--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "build": "graphql-codegen --config graphql.config.ts && next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "codegen": "graphql-codegen --config graphql.config.ts"
   },
   "dependencies": {
