feat(api): use user-id for avatar and stream thumbnails file names

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -14,8 +14,17 @@ SESSION_HTTP_ONLY=
 SESSION_SECURE=
 SESSION_FOLDER=
 
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_HOST=
+POSTGRES_PORT=
 POSTGRES_URI=
 
+REDIS_USER=
+REDIS_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
 REDIS_URI=
 
 MAIL_HOST=
