feat(apps): use pnpm as package manager

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,28 +1,30 @@
 FROM node:20.17.0-alpine AS base
 
-RUN apk add --no-cache libc6-compat
+RUN npm i -g pnpm
+
+# RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
+COPY package.json pnpm-lock.yaml ./
 
-RUN yarn install --frozen-lockfile
+RUN pnpm install --frozen-lockfile
 
-FROM base as build
+FROM base AS build
 
 COPY . .
 
-RUN yarn prisma generate
+RUN pnpm prisma generate
 
-RUN yarn build
+RUN pnpm build
 
 FROM base AS production
 
 WORKDIR /app
 
-COPY --from=build /app/package.json /app/yarn.lock ./
+COPY --from=build /app/package.json /app/pnpm-lock.yaml ./
 
-RUN yarn install --production --frozen-lockfile
+RUN pnpm install --prod --frozen-lockfile
 
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/prisma/generated ./prisma/generated
