--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,45 +1,45 @@
-NODE_ENV=
+NODE_ENV=''
 
-APPLICATION_PORT=
-APPLICATION_URL=
-ALLOWED_ORIGIN=
-GRAPHQL_PREFIX=
+APPLICATION_PORT=''
+APPLICATION_URL=''
+ALLOWED_ORIGIN=''
+GRAPHQL_PREFIX=''
 
-COOKIES_SECRET=
-SESSION_SECRET=
-SESSION_NAME=
-SESSION_DOMAIN=
-SESSION_MAX_AGE=
-SESSION_HTTP_ONLY=
-SESSION_SECURE=
-SESSION_FOLDER=
+COOKIES_SECRET=''
+SESSION_SECRET=''
+SESSION_NAME=''
+SESSION_DOMAIN=''
+SESSION_MAX_AGE=''
+SESSION_HTTP_ONLY=''
+SESSION_SECURE=''
+SESSION_FOLDER=''
 
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_URI=
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
+POSTGRES_DB=''
+POSTGRES_HOST=''
+POSTGRES_PORT=''
+POSTGRES_URI=''
 
-REDIS_USER=
-REDIS_PASSWORD=
-REDIS_HOST=
-REDIS_PORT=
-REDIS_URI=
+REDIS_USER=''
+REDIS_PASSWORD=''
+REDIS_HOST=''
+REDIS_PORT=''
+REDIS_URI=''
 
-MAIL_HOST=
-MAIL_PORT=
-MAIL_LOGIN=
-MAIL_PASSWORD=
+MAIL_HOST=''
+MAIL_PORT=''
+MAIL_LOGIN=''
+MAIL_PASSWORD=''
 
-S3_ENDPOINT=
-S3_REGION=
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-S3_BUCKET_NAME=
+S3_ENDPOINT=''
+S3_REGION=''
+S3_ACCESS_KEY_ID=''
+S3_SECRET_ACCESS_KEY=''
+S3_BUCKET_NAME=''
 
-LIVEKIT_API_URL=
-LIVEKIT_API_KEY=
-LIVEKIT_API_SECRET=
+LIVEKIT_API_URL=''
+LIVEKIT_API_KEY=''
+LIVEKIT_API_SECRET=''
 
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=''
