--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "build": "graphql-codegen --config graphql.config.ts && next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "codegen": "graphql-codegen --config graphql.config.ts"
   },
   "dependencies": {
@@ -79,6 +80,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-infinite-scroll-component": "^5.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
