--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,6 +61,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^5.0.0",
     "react-share": "^5.2.0",
+    "react-turnstile": "^1.1.4",
     "sonner": "^1.7.1",
     "subscriptions-transport-ws": "^0.11.0",
     "tailwind-merge": "^2.6.0",
