--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -50,4 +50,4 @@ GOOGLE_CLIENT_SECRET=''
 GITHUB_CLIENT_ID=''
 GITHUB_CLIENT_SECRET=''
 
-TURNSTILE_SECRET_KEY=''
+CLOUDFLARE_TURNSTILE_SECRET_KEY=''
