--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
     "url": "https://eldarcodes.com"
   },
   "scripts": {
-    "dev": "graphql-codegen --config graphql.config.ts && next dev --turbopack",
+    "dev": "graphql-codegen --config graphql.config.ts && next dev",
     "build": "graphql-codegen --config graphql.config.ts && next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,7 +33,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
