--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sentry/nextjs": "^9.13.0",
     "@tanstack/react-table": "^8.20.6",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.1",
