--- a/apps/api/.prettierrc
+++ b/apps/api/.prettierrc
@@ -7,6 +7,12 @@
   "importOrderCaseInsensitive": true,
   "importOrderParserPlugins": ["typescript", "decorators-legacy", "jsx"],
 
-  "importOrder": ["<THIRD_PARTY_MODULES>", "^@/(.*)$", "^../(.*)", "^./(.*)"],
+  "importOrder": [
+    "./instrument",
+    "<THIRD_PARTY_MODULES>",
+    "^@/(.*)$",
+    "^../(.*)",
+    "^./(.*)"
+  ],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
