--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,8 @@
     "@react-email/components": "^0.0.31",
     "@react-email/html": "^0.0.11",
     "@react-email/tailwind": "^1.0.4",
+    "@sentry/nestjs": "^9.13.0",
+    "@sentry/profiling-node": "^9.13.0",
     "argon2": "^0.41.1",
     "axios": "^1.8.4",
     "bullmq": "^5.46.1",
