--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,7 @@
     "@next/third-parties": "^15.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
@@ -42,6 +42,7 @@
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
     "graphql": "^16.10.0",
@@ -78,12 +79,14 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/leaflet": "^1.9.16",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-infinite-scroll-component": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "lodash.debounce": "^4.0.8",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
