--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,7 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
-    "emoji-picker-react": "^4.12.0",
+    "frimousse": "^0.2.0",
     "graphql": "^16.10.0",
     "graphql-config": "^5.1.3",
     "html-react-parser": "^5.2.2",
@@ -52,7 +52,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "livekit-client": "^2.8.1",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "next": "15.2.4",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
