build(web): try docker fix v2

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -5,8 +5,18 @@ RUN npm i -g pnpm
 WORKDIR /app
 
 ARG NEXT_PUBLIC_SERVER_URL
+ARG NEXT_PUBLIC_MEDIA_URL
+ARG NEXT_PUBLIC_TELEGRAM_BOT_URL
+ARG NEXT_PUBLIC_LIVEKIT_WS_URL
+ARG NEXT_PUBLIC_WEBSOCKET_URL
+ARG NEXT_PUBLIC_APP_URL
 
 ENV NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
+ENV NEXT_PUBLIC_MEDIA_URL=$NEXT_PUBLIC_MEDIA_URL
+ENV NEXT_PUBLIC_TELEGRAM_BOT_URL=$NEXT_PUBLIC_TELEGRAM_BOT_URL
+ENV NEXT_PUBLIC_LIVEKIT_WS_URL=$NEXT_PUBLIC_LIVEKIT_WS_URL
+ENV NEXT_PUBLIC_WEBSOCKET_URL=$NEXT_PUBLIC_WEBSOCKET_URL
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
 
 COPY package.json pnpm-lock.yaml ./
 
