build(web): update docker file to include turnstile and sentry env

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -4,19 +4,24 @@ RUN npm i -g pnpm
 
 WORKDIR /app
 
+# 🔹 Build-time args (public values + Sentry token for build)
 ARG NEXT_PUBLIC_SERVER_URL
 ARG NEXT_PUBLIC_MEDIA_URL
 ARG NEXT_PUBLIC_TELEGRAM_BOT_URL
 ARG NEXT_PUBLIC_LIVEKIT_WS_URL
 ARG NEXT_PUBLIC_WEBSOCKET_URL
 ARG NEXT_PUBLIC_APP_URL
+ARG NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY
+ARG SENTRY_AUTH_TOKEN
 
-ENV NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
-ENV NEXT_PUBLIC_MEDIA_URL=$NEXT_PUBLIC_MEDIA_URL
-ENV NEXT_PUBLIC_TELEGRAM_BOT_URL=$NEXT_PUBLIC_TELEGRAM_BOT_URL
-ENV NEXT_PUBLIC_LIVEKIT_WS_URL=$NEXT_PUBLIC_LIVEKIT_WS_URL
-ENV NEXT_PUBLIC_WEBSOCKET_URL=$NEXT_PUBLIC_WEBSOCKET_URL
-ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+# 🔹 Public config baked into image (these are okay to expose)
+ENV NEXT_PUBLIC_SERVER_URL=${NEXT_PUBLIC_SERVER_URL}
+ENV NEXT_PUBLIC_MEDIA_URL=${NEXT_PUBLIC_MEDIA_URL}
+ENV NEXT_PUBLIC_TELEGRAM_BOT_URL=${NEXT_PUBLIC_TELEGRAM_BOT_URL}
+ENV NEXT_PUBLIC_LIVEKIT_WS_URL=${NEXT_PUBLIC_LIVEKIT_WS_URL}
+ENV NEXT_PUBLIC_WEBSOCKET_URL=${NEXT_PUBLIC_WEBSOCKET_URL}
+ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
+ENV NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY=${NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY}
 
 COPY package.json pnpm-lock.yaml ./
 
@@ -24,7 +29,7 @@ RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN pnpm run build
+RUN SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN} pnpm run build
 
 EXPOSE 3000
 
