--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -14,14 +14,13 @@ ARG NEXT_PUBLIC_APP_URL
 ARG NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY
 ARG SENTRY_AUTH_TOKEN
 
-# 🔹 Public config baked into image (these are okay to expose)
-ENV NEXT_PUBLIC_SERVER_URL=${NEXT_PUBLIC_SERVER_URL}
-ENV NEXT_PUBLIC_MEDIA_URL=${NEXT_PUBLIC_MEDIA_URL}
-ENV NEXT_PUBLIC_TELEGRAM_BOT_URL=${NEXT_PUBLIC_TELEGRAM_BOT_URL}
-ENV NEXT_PUBLIC_LIVEKIT_WS_URL=${NEXT_PUBLIC_LIVEKIT_WS_URL}
-ENV NEXT_PUBLIC_WEBSOCKET_URL=${NEXT_PUBLIC_WEBSOCKET_URL}
-ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
-ENV NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY=${NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY}
+ENV NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
+ENV NEXT_PUBLIC_MEDIA_URL=$NEXT_PUBLIC_MEDIA_URL
+ENV NEXT_PUBLIC_TELEGRAM_BOT_URL=$NEXT_PUBLIC_TELEGRAM_BOT_URL
+ENV NEXT_PUBLIC_LIVEKIT_WS_URL=$NEXT_PUBLIC_LIVEKIT_WS_URL
+ENV NEXT_PUBLIC_WEBSOCKET_URL=$NEXT_PUBLIC_WEBSOCKET_URL
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+ENV NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY=$NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY
 
 COPY package.json pnpm-lock.yaml ./
 
@@ -29,7 +28,7 @@ RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN} pnpm run build
+RUN SENTRY_AUTH_TOKEN=$SENTRY_AUTH_TOKEN pnpm run build
 
 EXPOSE 3000
 
