--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -12,7 +12,6 @@ ARG NEXT_PUBLIC_LIVEKIT_WS_URL
 ARG NEXT_PUBLIC_WEBSOCKET_URL
 ARG NEXT_PUBLIC_APP_URL
 ARG NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY
-ARG SENTRY_AUTH_TOKEN
 
 ENV NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
 ENV NEXT_PUBLIC_MEDIA_URL=$NEXT_PUBLIC_MEDIA_URL
@@ -28,7 +27,7 @@ RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN SENTRY_AUTH_TOKEN=$SENTRY_AUTH_TOKEN pnpm run build
+RUN pnpm run build
 
 EXPOSE 3000
 
